snapshots/care/data4life/hc-result-sdk-kmp/error/0.3.0-SNAPSHOT/error-0.3.0-20210927.134351-1.pom.sha512
820edf97f5017465aa90cae36448fe9ab27af6ac45ea67bd4583961a3ca1ac63d914654fd1b3f4ba00b6f1b66e36a90c50fd71de59329e6f4056b44a139bd9a6